WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288896
REGRESSION(
290387@main
?): [ iOS ] editing/caret/caret-position-vertical-rl.html is a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=288896
Summary
REGRESSION(290387@main?): [ iOS ] editing/caret/caret-position-vertical-rl.ht...
Yasmin Karimi
Reported
2025-02-28 18:02:02 PST
editing/caret/caret-position-vertical-rl.html This test is a constant failure on iOS. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=editing%2Fcaret%2Fcaret-position-vertical-rl.html
TEXT DIFF: @@ -10,12 +10,12 @@ Click at 65, 5 for left of third line : 81,175,20,2 Click at 65, 275 for right of third line : 81,175,20,2 Click at 85, 5 for left of fourth line : 101,80,20,2 -Click at 85, 275 for right of fourth line : 140,120,20,2 +Click at 85, 275 for right of fourth line : 120,100,19,2 Click at 105, 5 for left of fifth line : 140,120,20,2 Click at 105, 275 for right of fifth line : 160,140,20,2 -Click at 125, 5 for left of sixth line : 160,140,20,2 +Click at 125, 5 for left of sixth line : 140,259,20,2 Click at 125, 275 for right of sixth line : 160,199,20,2 -Click at 145, 5 for left of seventh line : 160,140,20,2 +Click at 145, 5 for left of seventh line : 140,259,20,2 Click at 145, 275 for right of seventh line : 160,199,20,2 Click at 170, 5 for left below last line : 160,199,20,2 Click at 170, 275 for right below last line : 160,199,20,2 DIFF URL:
https://ews-build.s3-us-west-2.amazonaws.com/iOS-18-Simulator-WK2-Tests-EWS/5a672fb0-9544-clean-tree/editing/caret/caret-position-vertical-rl-pretty-diff.html
REPRODUCIBILITY: I was able to reproduce this issue on the iOS 18.2 simulator at ToT using the following command: run-webkit-tests --ios-simulator --child-processes 2 -f editing/caret/caret-position-vertical-rl.html --iterations 5 REGRESSION: According to the results dashboard and contextual information, the probable regression point is
290387@main
, before which, this test was a flaky failure. The code paths changed in this commit appear to be related to the observed regression test failure. The regression range appears to be
290385@main
-
290387@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-28 18:02:12 PST
<
rdar://problem/145896127
>
EWS
Comment 2
2025-02-28 18:14:02 PST
Test gardening commit
291416@main
(2f34f8fe8280): <
https://commits.webkit.org/291416@main
> Reviewed commits have been landed. Closing PR #41692 and removing active labels.
fantasai
Comment 3
2025-03-04 17:22:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41894
EWS
Comment 4
2025-03-07 10:44:58 PST
Committed
291785@main
(d250e4b60586): <
https://commits.webkit.org/291785@main
> Reviewed commits have been landed. Closing PR #41894 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug