Fix iOS caret positioning to use logical coordinates https://bugs.webkit.org/show_bug.cgi?id=288896 rdar://145896127

Reviewed by NOBODY (OOPS!).

290387@main introduced a regression by swapping half of a comparison from
physical to logical coordinates; but actually, we should be using all
logical coordinates here so that it works in vertical writing modes.

* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::positionForPoint): Use logicalPoint instead of point.